# icar-pd

./: .gitignore  README.md  adc.cpp
doc/: 车模技术检查表(国赛).docx
res/calibration/: assessment.txt  calibration.xml
res/calibration/valid/: assessment.txt  calibration.xml
res/model/ssd_mobilenet_v1/: label_list.txt  mobilenet-ssd-model
res/model/yolov3_mobilenet_v1/: io_paddle.json  nms.tar
res/model/yolov3_mobilenet_v1_0530/: nms.tar
res/model/yolov3_mobilenet_v1_0714/: nms.tar
res/model/yolov3_mobilenet_v1_160/: deploy_paddle.ro  io_paddle.json  nms.tar  post.onnx
res/model/yolov3_mobilenet_v1_bright/: nms.tar
res/model/yolov3_mobilenet_v1_light/: label_list.txt  nms.tar
res/model/yolov3_mobilenet_v1_new/: nms.tar
res/model/yolov3_mobilenet_v1_new1/: nms.tar
res/model/yolov3_mobilenet_v1_old2/: nms.tar  post.onnx
res/model/yolov3_mobilenet_v1_old3/: deploy_paddle.ro
src/: CMakeLists.txt
src/config/: bridge.json  config_ppncnms.json  config_ppncnna.json  depot.json  farmland.json  garage.json  granary.json  motion.json  motion_new.json  slowzone.json
src/config/1.2m/s/: depot.json  farmland.json  garage.json  motion.json
src/config/1.4m/: bridge.json  depot.json  farmland.json  garage.json  motion.json
src/include/: capture.hpp  common.hpp  detection.hpp  serial.hpp  uart.hpp
src/src/: controlcenter_cal.cpp  icar.cpp  image_preprocess.cpp  motion_control.cpp  motion_controller.cpp  perspective_mapping.cpp  testing.cpp
src/src/detection/: bridge_detection.cpp  depot_detection.cpp  farmland_avoidance.cpp  farmland_detection.cpp  granary_detect.cpp  granary_detection.cpp  slowzone_detection.cpp
src/src/recognize/: cross_recognition.cpp  garage_recognition.cpp  garage_recognize.cpp  ring_recognize.cpp  track_recognition.cpp
src/tools/: camera_calibration.cpp  camera_collection.cpp  camera_display.cpp  cone_blue_enrode.cpp  cone_detection.cpp  hsv_blocks.cpp  image_collection.cpp  paddle_detection.cpp  perspective_test.cpp  pid_test.cpp  test.cpp  uart_test.cpp
